# xnatio

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile.ubuntu20.builder  LICENSE  README.md  pyproject.toml  tests
docs/: resource-upload-vs-dicom-upload.md
scripts/: build_xnatio.sh  upload_arterial_resources.sh  upload_curb_nabi_arterial.sh  upload_curb_nabi_dicom.sh  upload_sdm8_casdy.sh
tests/: test_utils.py  test_xnat_client.py
xnatio/: __init__.py  cli.py  config.py  main.py  utils.py  xnat_client.py
