[project]
name = "xnatio"
version = "0.1.0"
description = "CLI utilities for interacting with CAMH XNAT instance with focus on admin use cases"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ricky Wong", email = "ricky.wong@camh.ca, "}
]
license = {text = "MIT"}
homepage = "https://gitlab.camh.ca/xnat/xnatio"
repository = "https://gitlab.camh.ca/xnat/xnatio.git"
keywords = ["xnat", "dicom", "neuroimaging", "cli", "camh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Archiving",
]
dependencies = [
    "pyxnat>=1.6.3",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.scripts]
xnatio = "xnatio.cli:run_cli"

[tool.uv]
package = true

# Build system configuration for packaging
[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["xnatio*"]