[project]
name = "xnatio"
version = "0.1.0"
description = "CLI utilities for interacting with XNAT instance with focus on admin use cases"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ricky Wong", email = "rickywonglt15@outlook.com"}
]
license = {text = "MIT"}
keywords = ["xnat", "dicom", "neuroimaging", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Archiving",
]
dependencies = [
    "pyxnat>=1.6.3",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
xnatio = "xnatio.cli:run_cli"
xio = "xnatio.cli:run_cli"

[project.urls]
homepage = "https://github.com/rickyltwong/xnatio"
repository = "https://github.com/rickyltwong/xnatio.git"

[tool.uv]
package = true

# Build system configuration for packaging
[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["xnatio*"]